<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, BupddyUpActivity!</string>
    <string name="app_name">BupddyUp</string>
    <string name="fun">Sport is more fun with a buddy</string>
    <string name="username">Username : </string>
    <string name="password">&quot;Password : &quot;</string>
    <string name="remember">Remember username and password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="sign">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="test">Have google sdsdsd sdsdsd sdsdsd sdsdsd sdsdsd sdsds sdsd sdsd sd \nsd sdsd sd \nsd sdsd sd \nsd sdsd sd \nsd sdsd sd \nsd sdsd sd \nsd sdsd sd \nsd sdsd sd \nsd sdsd sd \nsd sdsd sd \nsd sdsd sd \nsd sdsd sd \nsd sdsd sd \nsd sdsd sd \nsd sdsd sd \nsd sdsd sd \nsd sdsd sd \nsd sdsd sd \nsd sdsd sd \nsd sdsd sd \nsd sdsd sd \nsd sdsd sd \nsd sdsd sd \nsd sdsd sd \nsd sdsd sd \n</string>
    <string name="message">Message :  xxx thid  xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid  xxx thid  xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid  xxx thid  xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid  xxx thid  xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid  xxx thid  xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid  xxx thid  xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid  xxx thid  xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid  xxx thid  xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid  xxx thid  xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid  xxx thid  xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid  xxx thid  xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid  xxx thid  xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid  xxx thid  xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid  xxx thid  xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid xxx thid </string>
    <string name="ssss">Please include me on the buddyup.com newsletter mailing list</string>
    <string name="aaa">Keara\nNona\nMeta</string>
    <string name="tesy">"Crew a sail boat on Wednesdays. Don't own boat, but captain always looking for others."</string>
    <string name="sss">None of these.</string>
    <string name="date">Thursday, November 10, 2011</string>
    <string name="sd">Mile to Buddy :</string>
    <string name="sport">Sport/Activity :</string>
    <string name="spec">Specific Meeting Location :</string>
    <string name="agegroup">Age Group :</string>
    <string name="started">Started Skill :</string>
    <string name="skill">Skill Rating :</string>
    <string name="rating">Dependability Rating :</string>
    <string name="sssss">Overall Rating :</string>
    <string name="accepted">Accepted Return Message :</string>
    <string name="text">Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text Text </string>
    <string name="sdf">Remember that your evaluation will never show up individually. Only after 3 evaluations are received are the average of the evaluations shown for a member. It is important that you fill out an evaluation to help others use their activity time well and to make buddyup.com more useful.</string>
    <string name="tinme">Wednesday, October 19, 2012</string>
    <string name="deo">Dependability</string>
    <string name="loadding">Loading ...</string>
    <string name="emailcheck">Emailcheck</string>
    <string name="userpassword">Password</string>
    <string name="my_profile">My Profile</string>
    <string name="option_information">Optional Information</string>
    <string name="sport_information">Sports Information</string>
    <string name="add_a_buddy">Add a Buddy</string>
    <string name="buddies">Buddies</string>
    <string name="new_message">New Message</string>
    <string name="group_of_buddies">Group of Buddies</string>
    <string name="all_group">All Groups</string>
    <string name="add_member">Add Member</string>
    <string name="group_detail">Group Detail</string>
    <string name="create_group">Create Group</string>
    <string name="repassword">"Repassword : "</string>
    <string name="close">Close</string>
    <string name="message1">Message</string>
    <string name="do_you_want_delete_profile">Do you want delete profile?</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
</resources>
